@@ -155,10 +155,10 @@ Unique DBUS controller id
 File Argument is a playlist
 .TP
 .B \-v, \-\-verbose
-Show more ouput on the console
+Show more output on the console
 .TP
 .B \-\-reallyverbose
-Show even more ouput on the console
+Show even more output on the console
 .TP
 .B \-\-fullscreen
 Start in fullscreen mode
